--- a/asg3/styles.css
+++ b/asg3/styles.css
@@ -4,16 +4,11 @@ h1 {
   font-style: normal;
 }
 
-h2 {
+h2, h3 {
   font-family: "Libre Baskerville", serif;
   font-weight: 400;
 }
 
-h3 {
-  font-family: "Libre Baskerville", serif;
-  font-weight: 400;
-}
-
-p {
+p, li {
   font-family: "Montserrat", sans-serif;
 }
