--- a/asg4/styles.css
+++ b/asg4/styles.css
@@ -1,6 +1,6 @@
 h1, h2 {
-  font-family: "IBM Plex Serif", serif;
-  font-weight: 700;
+  font-family: "Solway", serif;
+  font-weight: 500;
   font-style: normal;
 }
 p, ul {
