--- a/asg4/styles.css
+++ b/asg4/styles.css
@@ -3,7 +3,7 @@ h1, h2 {
   font-weight: 500;
   font-style: normal;
 }
-p, ul {
+p, ul, th, td {
   font-family: "Rationale", sans-serif;
   font-weight: 400;
   font-style: normal;
