--- a/asg4/styles.css
+++ b/asg4/styles.css
@@ -9,6 +9,9 @@
   background-color: WhiteSmoke;
   text-align: center;
   font-weight: bold;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  font-style: italic;
 }
 
 .info {
@@ -17,8 +20,11 @@
 
 h1, h2{
   color: RebeccaPurple;
+  font-family: "Ubuntu", sans-serif;
 }
 
 body {
   background-image: url('https://texturelabs.org/wp-content/uploads/Texturelabs_Paper_200S.jpg');
+  font-family: "Rokkitt", serif;
+  font-style: normal;
 }
