--- a/asg4/styles.css
+++ b/asg4/styles.css
@@ -1,7 +1,7 @@
 .topbar {
+  color: WhiteSmokes;
   background-color: RebeccaPurple;
   text-align: left;
-  link-color: White;
   font-size: 50;
 }
 
