--- a/asg4/styles.css
+++ b/asg4/styles.css
@@ -2,7 +2,7 @@
   color: WhiteSmokes;
   background-color: RebeccaPurple;
   text-align: left;
-  font-size: 50;
+  font-size: 50 px;
 }
 
 .header {
@@ -16,6 +16,7 @@
 
 .info {
   background-color: WhiteSmoke;
+  opacity: 80%;
 }
 
 h1, h2{
@@ -24,7 +25,12 @@ h1, h2{
 }
 
 body {
-  background-image: url('https://texturelabs.org/wp-content/uploads/Texturelabs_Paper_200S.jpg');
+  background-image: url('https://coolbackgrounds.imgix.net/4BIP4ge9ontCTkNubiY4lb/48121f9d09134fd83670b1d6e182aa66/white-particles-background.png?w=640&q=60&auto=format,compress');
   font-family: "Rokkitt", serif;
   font-style: normal;
+}
+
+.image {
+  background-color: WhiteSmoke;
+  opacity: 80%;
 }
