--- a/asg4/styles.css
+++ b/asg4/styles.css
@@ -1,8 +1,8 @@
 .topbar {
-  color: WhiteSmokes;
+  color: WhiteSmoke;
   background-color: RebeccaPurple;
   text-align: left;
-  font-size: 50 px;
+  font-size: 70px;
 }
 
 .header {
