--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,9 @@
 body {
-	background-image: 
+	background-image: url('assets/images/background.png');
+}
+
+#main {
+	background-color: Red;
+	text-align: center;
+	margin: 0 auto;
 }
