--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,3 +11,10 @@ body {
 	min-width: 350px;
 	max-width: 900px;
 }
+
+#main .title {
+	font-family: "Mr Bedfort", cursive;
+	font-size: 150px;
+	text-shadow: 4px 8px 15px;
+	border-radius: 20px;
+}
