--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,7 @@ body {
 
 #main .title {
 	font-family: "Mr Bedfort", cursive;
-	font-size: 150px;
-	text-shadow: 4px 8px 15px;
+	font-size: 55%;
+	text-shadow: 4px 8px 15px black;
 	border-radius: 20px;
 }
