--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,7 @@ body {
 
 #main .title {
 	font-family: "Mr Bedfort", cursive;
-	font-size: 75%;
+	font-size: 50px;
 	text-shadow: 4px 8px 15px black;
 	border-radius: 20px;
 }
