--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@ body {
 	border-radius: 20px;
 	text-align: center;
 	margin: 0 auto;
-	padding: 20px 30px;
+	padding: 10px 30px 20px 30px;
 	min-width: 350px;
 	max-width: 900px;
 }
@@ -17,4 +17,12 @@ body {
 	font-family: "Mr Bedfort", cursive;
 	font-size: 20px;
 	text-shadow: 4px 8px 10px black;
+}
+
+#main .subtitle {
+	font-family: "Vidaloka", serif;
+	font-size: 15px;
+	text-shadow: 1px 2px 5px black;
+	padding-top: 3px;
+	letter-spacing: 5px;
 }
