--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,7 @@ body {
 	color: white;
 	background-color: crimson;
 	border-radius: 20px;
+	padding: 30px 10px 30px 20px;
 	text-align: center;
 	margin: 0 auto;
 	min-width: 350px;
