--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,6 +33,7 @@ body {
 	padding: 30px 10px 30px 20px;
 	text-align: justify;
 	margin: 0 auto;
+	width: 45%;
 }
 
 #assignments {
@@ -41,6 +42,7 @@ body {
 	padding: 30px 10px 30px 20px;
 	text-align: justify;
 	margin: 0 auto;
+	width: 45%;
 }
 
 #media {
@@ -48,6 +50,7 @@ body {
 	border-radius: 20px;
 	padding: 30px 10px 30px 20px;
 	margin: 0 auto;
+	width: 45%;
 }
 
 h2, h3 {
