--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,10 @@ body {
 	border-radius: 20px;
 	padding: 30px 10px 30px 20px;
 	text-align: center;
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	margin-bottom: 20px;
 	min-width: 350px;
 	max-width: 900px;
 }
@@ -32,7 +35,10 @@ body {
 	border-radius: 20px;
 	padding: 30px 10px 30px 20px;
 	text-align: justify;
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	margin-bottom: 20px;
 	width: 45%;
 }
 
@@ -41,7 +47,10 @@ body {
 	border-radius: 20px;
 	padding: 30px 10px 30px 20px;
 	text-align: justify;
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	margin-bottom: 20px;
 	width: 45%;
 }
 
@@ -49,7 +58,10 @@ body {
 	background-color: white;
 	border-radius: 20px;
 	padding: 30px 10px 30px 20px;
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	margin-bottom: 20px;
 	width: 45%;
 }
 
