--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,8 +12,7 @@ body {
 	margin-right: auto;
 	margin-top: 10px;
 	margin-bottom: 20px;
-	min-width: 350px;
-	max-width: 900px;
+	width: 55%;
 }
 
 #main .title {
