--- a/asg5/styles.css
+++ b/asg5/styles.css
@@ -1,1 +1,10 @@
+.dabi, .jinx, .xielian {
+  display: grid;
+  align-items: center; 
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 5px;
+}
 
+img {
+  width: 45%
+}
