--- a/asg5/styles.css
+++ b/asg5/styles.css
@@ -4,7 +4,7 @@ body {
 
 .topbar {
   text-align: center;
-  background-color: white;
+  background-color: WhiteSmoke;
   border-radius: 10px;
   width: 55%;
 }
