--- a/asg5/styles.css
+++ b/asg5/styles.css
@@ -5,10 +5,19 @@ body {
 .topbar {
   background-color: white;
   border-radius: 10px;
-  padding: 10px 5px;
+  padding: 5px 5px;
   text-align: center;
   margin: 0, auto;
   font-size: 55%
+  width: 55%;
+}
+
+.header {
+  background-color: crimson;
+  text-color: white;
+  border-radius: 10px;
+  padding: 10px 10px;
+  margin: 0, auto;
   width: 55%;
 }
 
