--- a/asg5/styles.css
+++ b/asg5/styles.css
@@ -8,7 +8,7 @@ body {
   padding: 30px 10px 30px 20px;
   text-align: center;
   margin: 0, auto;
-  font-size: 55%
+  font-size: 55%;
   width: 55%;
 }
 
