--- a/asg5/styles.css
+++ b/asg5/styles.css
@@ -3,28 +3,29 @@ body {
 }
 
 .topbar {
-  background-color: white;
-  border-radius: 10px;
-  padding: 30px 10px 30px 20px;
-  text-align: center;
-  margin-left: auto;
+	background-color: white;
+	border-radius: 10px;
+	padding: 30px 10px 30px 20px;
+	text-align: center;
+	margin-left: auto;
 	margin-right: auto;
 	margin-top: 10px;
 	margin-bottom: 20px;
-  font-size: 55%;
-  width: 55%;
+	font-size: 15%;
+	width: 55%;
+	height: 5%;
 }
 
 .header {
-  background-color: crimson;
-  text-color: white;
-  border-radius: 10px;
-  padding: 30px 10px 30px 20px;
-  margin-left: auto;
+	background-color: crimson;
+	text-color: white;
+	border-radius: 10px;
+	padding: 30px 10px 30px 20px;
+	margin-left: auto;
 	margin-right: auto;
 	margin-top: 10px;
 	margin-bottom: 20px;
-  width: 55%;
+	width: 55%;
 }
 
 .dabi, .jinx, .xielian {
