--- a/asg5/styles.css
+++ b/asg5/styles.css
@@ -5,7 +5,7 @@ body {
 .topbar {
 	background-color: white;
 	border-radius: 10px;
-	padding: 10px 5px 10px 5px;
+	padding: 30px 5px 30px 5px;
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
@@ -33,6 +33,15 @@ body {
   align-items: center; 
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 1px;
+	background-color: white;
+	border-radius: 10px;
+	padding: 30px 5px 30px 5px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	font-size: 100%;
+	width: 55%;
 }
 
 img {
