--- a/asg5/styles.css
+++ b/asg5/styles.css
@@ -13,12 +13,12 @@ body {
 	margin-bottom: 20px;
 	font-size: 100%;
 	width: 45%;
-	height: 5%;
+	height: 1%;
 }
 
 .header {
 	background-color: crimson;
-	text-color: white;
+	color: white;
 	border-radius: 10px;
 	padding: 30px 10px 30px 20px;
 	margin-left: auto;
@@ -35,7 +35,7 @@ body {
   column-gap: 10px;
 	background-color: white;
 	border-radius: 10px;
-	padding: 30px 5px 30px 5px;
+	padding: 30px 10px 30px 10px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 10px;
@@ -44,5 +44,5 @@ body {
 }
 
 img {
-  width: 85%
+  width: 95%
 }
