--- a/asg5/styles.css
+++ b/asg5/styles.css
@@ -32,3 +32,15 @@ body {
 img {
   width: 95%
 }
+
+.menu {
+	background-color: crimson;
+	color: white;
+	border-radius: 10px;
+	padding: 30px 10px 30px 20px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30px;
+	margin-bottom: 20px;
+	width: 45%;
+}
