--- a/asg5/styles.css
+++ b/asg5/styles.css
@@ -27,6 +27,7 @@ body {
 	margin-top: 10px;
 	margin-bottom: 20px;
 	width: 45%;
+	text-align: justify;
 }
 
 img {
@@ -36,6 +37,7 @@ img {
 .menu {
 	background-color: crimson;
 	color: white;
+	text-align: center;
 	border-radius: 10px;
 	padding: 30px 10px 30px 20px;
 	margin-left: auto;
