--- a/asg6/styles.css
+++ b/asg6/styles.css
@@ -27,7 +27,7 @@
 /* End of navigation bar css */
 
 html {
-      background-image: webb-dark.png;
+      background-image: url ('./asg6/images/webb-dark.png')
 }
 
 header {
