--- a/asg6/styles.css
+++ b/asg6/styles.css
@@ -27,7 +27,7 @@
 /* End of navigation bar css */
 
 body {
-      background-image: url("webb-dark.png")
+      background-image: url("webb-dark.png");
 }
 
 header {
