--- a/asg6/styles.css
+++ b/asg6/styles.css
@@ -33,4 +33,7 @@ body {
 header {
       top: 50px;
       position: relative;
+      text-align: center;
+      background-color: white;
+      width: 100%;
 }
