--- a/asg6/styles.css
+++ b/asg6/styles.css
@@ -36,4 +36,8 @@ header {
       text-align: center;
       background-color: white;
       width: 100%;
+      padding-top: 50px;
+      padding-bottom: 15px;
+      left: 0px;
+      right: 0px;
 }
