--- a/asg6/styles.css
+++ b/asg6/styles.css
@@ -33,8 +33,8 @@ body {
 
 header {
       position: relative;
+      top: 0px;
       left: 0px;
-      right: 0px;
       text-align: center;
       background-color: white;
       width: 120%;
