--- a/asg6/styles.css
+++ b/asg6/styles.css
@@ -8,6 +8,7 @@
       top: 0px;
       left: 0px;
       opacity: 75%;
+      font-family: "Schibsted Grotesk", sans-serif;
       z-index: 9;
 }
 
@@ -40,6 +41,7 @@ header {
       left: 0px;
       padding-top: 50px;
       padding-bottom: 7px;
+      font-family: "Indie Flower", cursive;
       z-index: 8;
 }
 
