--- a/asg6/styles.css
+++ b/asg6/styles.css
@@ -47,4 +47,8 @@ header {
 h1 {
       color: #A62FFA;
       font-family: "Indie Flower", cursive;
+      background-image: url('./images/greenhat.png');
+      background-repeat: no-repeat;
+      background-size: 30%;
+      float: bottom;
 }
