--- a/asg6/styles.css
+++ b/asg6/styles.css
@@ -56,8 +56,10 @@ h1 {
 
 .interview {
       float: right;
+      background-color: white;
 }
 
 .project {
       float: left;
+      background-color: white;
 }
