--- a/asg6/styles.css
+++ b/asg6/styles.css
@@ -59,7 +59,8 @@ h1 {
       background-color: white;
       width: 40%;
       z-index: 7;
-      left: 10px;
+      top: 250px;
+      left: 50px;
       overflow-x: hidden;
 }
 
@@ -67,6 +68,7 @@ h1 {
       float: left;
       background-color: white;
       width: 40%;
-      right: 10px;
+      top: 250px;
+      right: 50px;
       overflow-x: hidden;
 }
