--- a/asg6/styles.css
+++ b/asg6/styles.css
@@ -59,7 +59,7 @@ h1 {
       background-color: white;
       width: 50%;
       z-index: 7;
-      padding-top: 200px;
+      margin-top: 200px;
       overflow-x: hidden;
 }
 
@@ -68,6 +68,6 @@ h1 {
       background-color: white;
       width: 50%;
       z-index: 7;
-      padding-top: 200px;
+      margin-top: 200px;
       overflow-x: hidden;
 }
