--- a/asg6/styles.css
+++ b/asg6/styles.css
@@ -57,17 +57,23 @@ h1 {
 .interview {
       float: right;
       background-color: white;
-      width: 50%;
+      width: 45%;
       z-index: 7;
       margin-top: 50px;
       overflow-x: hidden;
+      font-family: "Schibsted Grotesk", sans-serif;
 }
 
 .project {
       float: left;
       background-color: white;
-      width: 50%;
+      width: 45%;
       z-index: 7;
       margin-top: 50px;
       overflow-x: hidden;
+      font-family: "Schibsted Grotesk", sans-serif;
+}
+
+h2, h3 {
+     font-family: "Indie Flower", cursive; 
 }
