--- a/asg6/styles.css
+++ b/asg6/styles.css
@@ -57,9 +57,10 @@ h1 {
 .interview {
       float: right;
       background-color: white;
-      width: 45%;
+      width: 48%;
       z-index: 7;
       margin-top: 50px;
+      padding: 0 auto;
       overflow-x: hidden;
       font-family: "Schibsted Grotesk", sans-serif;
 }
@@ -67,9 +68,10 @@ h1 {
 .project {
       float: left;
       background-color: white;
-      width: 45%;
+      width: 48%;
       z-index: 7;
       margin-top: 50px;
+      padding: 0 auto;
       overflow-x: hidden;
       font-family: "Schibsted Grotesk", sans-serif;
 }
