--- a/asg7/styles.css
+++ b/asg7/styles.css
@@ -51,3 +51,15 @@ h1 {
 }
 
 /* body */
+
+.main {
+      float: left;
+      background-color: white;
+      width: 60%;
+}
+
+aside {
+      float: right;
+      background-color: white;
+      width: 30%;
+}
