--- a/asg7/styles.css
+++ b/asg7/styles.css
@@ -52,14 +52,26 @@ h1 {
 
 /* body */
 
+p {
+      font-family: "Schibsted Grotesk", sans-serif;
+}
+
+h2 {
+      text-align: center;
+      font-family: "Indie Flower", cursive;
+      font-size: 1.5em;
+}
+
 .main {
       float: left;
       background-color: white;
       width: 60%;
+      left: 10px;
 }
 
 aside {
       float: right;
       background-color: white;
       width: 30%;
+      left: 10px;
 }
