--- a/asg7/styles.css
+++ b/asg7/styles.css
@@ -27,7 +27,7 @@
 /* End of navigation bar css */
 
 body {
-      background-image: url('./images/webb-dark.png');
+      background-image: url('./imgs/webb-dark.png');
 }
 
 /* header */
