--- a/asg7/styles.css
+++ b/asg7/styles.css
@@ -66,8 +66,10 @@ h2 {
       float: left;
       background-color: white;
       width: 45%;
-      padding-left: 20px;
+      padding: 20px 20px 20px 20px;
       overflow-x: hidden;
+      top: 500px;
+      left: 30px;
 }
 
 .hobbesimg {
@@ -79,8 +81,10 @@ aside {
       float: right;
       background-color: white;
       width: 20%;
-      padding-right: 20px;
+      padding: 20px 20px 20px 20px;
       overflow-x: hidden;
+      top: 500px;
+      right: 30px;
 }
 
 .info {
