--- a/asg7/styles.css
+++ b/asg7/styles.css
@@ -71,6 +71,7 @@ h2 {
       top: 1000px;
       left: 400px;
       margin-left: 400px;
+      margin-top: 500px;
 }
 
 .hobbesimg {
@@ -87,6 +88,7 @@ aside {
       top: 1000px;
       right: 400px;
       margin-right: 400px;
+      margin-top: 500px;
 }
 
 .info {
