--- a/asg7/styles.css
+++ b/asg7/styles.css
@@ -100,3 +100,14 @@ aside {
 .info {
       margin: 0 auto;
 }
+
+main, .wireframes {
+      background-color: white;
+      width: 60%;
+      padding: 20px 20px 20px 20px;
+      overflow-x: hidden;
+      top: 1000px;
+      left: 400px;
+      margin-left: 400px;
+      margin-top: 100px;
+}
