--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -28,3 +28,33 @@ table {
 	border-spacing: 0;
 } 
 /* end reset browser styles */
+
+/* Overarching Styles */
+
+body {
+	background-color: #D8DAD3;
+	font-size: 10px;
+}
+
+p {
+	text-align: justify;
+	color: #1C1C1C;
+	font-family: "Source Sans 3", "Roboto", sans-serif;
+	font-size: 1.78em;
+}
+
+h1 {
+	text-align: center;
+	color: #1C1C1C;
+	font-family: "Neuton", serif;
+	font-size: 4.21em;
+}
+
+h2 {
+	text-align: left;
+	color: #826C7F;
+	font-family: "Neuton", serif;
+	font-size: 3.16em;
+}
+
+/* End overarching styles */
