--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -78,6 +78,8 @@ h2 {
 
 .navigation a:link, a:visited {
 	color: #F1F2EB;
+	font-family: "Neuton", serif;
+	font-size: 2.37em;
 }
 
 .navigation a:hover {
