--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -66,7 +66,7 @@ h2 {
 	width: 100%;
 	background-color: #A4C2A5;
 	text-align: center;
-	font-size: 1.78em;
+	font-size: 10px;
 }
 
 .navigation li {
