--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -73,6 +73,7 @@ h2 {
 	display: inline-block;
 	color: #F1F2EB;
 	font-family: "Neuton", serif;
+	font-size: 2.37em;
 }
 
 .navigation a:link, a:visited {
