--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -67,6 +67,8 @@ h2 {
 	background-color: #A4C2A5;
 	text-align: center;
 	font-size: 10px;
+	padding-top: 30px;
+	padding-bottom: 25px;
 }
 
 .navigation li {
