--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -93,3 +93,11 @@ h2 {
 }
 
 /* end navigation styles */
+
+/* begin header styles */
+
+.header {
+	text-align: center;
+}
+
+/* end header styles */
