--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -88,8 +88,8 @@ h2 {
 }
 
 .home {
-	padding-left: 20px;
-	padding-right: 20px;
+	padding-left: 40px;
+	padding-right: 40px;
 }
 
 /* end navigation styles */
@@ -98,6 +98,7 @@ h2 {
 
 .header {
 	text-align: center;
+	padding-top: 60px;
 }
 
 /* end header styles */
