--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -98,7 +98,13 @@ h2 {
 
 .header {
 	text-align: center;
-	padding-top: 80px;
+	padding-top: 100px;
+}
+
+.header p {
+	text-align: center;
+	font-style: italic;
+	font-size: 2.37em;
 }
 
 /* end header styles */
