--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -116,7 +116,7 @@ h2 {
 	background-color: #F1F2EB;
 	border-radius: 10px;
 	margin-left: auto;
-	margin-bottom: auto;
+	margin-right: auto;
 	max-width: 900px;
 }
 
