--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -117,6 +117,9 @@ h2 {
 	border-radius: 10px;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 150px;
+	padding-left: 20px;
+	padding-right: 20px;
 	max-width: 900px;
 }
 
