--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -117,9 +117,11 @@ h2 {
 	border-radius: 10px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 150px;
-	padding-left: 20px;
-	padding-right: 20px;
+	margin-top: 125px;
+	padding-left: 40px;
+	padding-right: 40px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 	max-width: 900px;
 }
 
