--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -129,6 +129,7 @@ h2 {
 	font-weight: 700;
 	padding-bottom: 7px;
 	border-bottom: thick solid #826C7F;
+	margin-bottom: 15px;
 }
 
 /* end main styles */
